--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tracing = { version = "0.1.35", features = ["max_level_trace", "release_max_level_off"] }
 
 [dev-dependencies]
+datatest = "0.7.1"
 tracing-subscriber = "0.3.14"
 
 [features]
