--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "dissat"
 version = "0.1.0"
 edition = "2021"
 
+[profile.bench]
+debug = true
+
 [dependencies]
-tracing = { version = "0.1.35", features = ["max_level_trace", "release_max_level_off"] }
+tracing = { version = "0.1.35", features = ["max_level_trace", "release_max_level_info"] }
 
 [dev-dependencies]
 datatest = "0.7.1"
