--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 debug = true
 
 [dependencies]
+bitflags = "1.3.2"
 tracing = { version = "0.1.35", features = ["max_level_trace", "release_max_level_info"] }
 
 [dev-dependencies]
